Added initial file structure and redux store

--- a/package.json
+++ b/package.json
@@ -7,12 +7,21 @@
     "eject": "expo eject"
   },
   "dependencies": {
+    "@material-ui/core": "^3.9.3",
     "expo": "^32.0.0",
     "react": "16.5.0",
-    "react-native": "https://github.com/expo/react-native/archive/sdk-32.0.0.tar.gz"
+    "react-native": "https://github.com/expo/react-native/archive/sdk-32.0.0.tar.gz",
+    "react-redux": "^7.0.3",
+    "redux": "^4.0.1",
+    "redux-devtools-extension": "^2.13.8",
+    "redux-thunk": "^2.3.0"
   },
   "devDependencies": {
-    "babel-preset-expo": "^5.0.0"
+    "babel-preset-expo": "^5.0.0",
+    "enzyme": "^3.9.0",
+    "enzyme-adapter-react-16": "^1.13.1",
+    "react-test-renderer": "^16.8.6",
+    "remote-redux-devtools": "^0.5.16"
   },
   "private": true
 }
