--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "expo": "^32.0.0",
     "react": "16.5.0",
     "react-native": "https://github.com/expo/react-native/archive/sdk-32.0.0.tar.gz",
+    "react-native-super-grid": "^3.0.4",
     "react-navigation": "^3.11.0",
     "react-redux": "^6.0.0",
     "redux": "^4.0.1",
