--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react": "16.5.0",
     "react-dom": "^16.8.6",
     "react-native": "https://github.com/expo/react-native/archive/sdk-32.0.0.tar.gz",
+    "react-native-stopwatch-timer": "0.0.20",
     "react-native-super-grid": "^3.0.4",
     "react-navigation": "^3.11.0",
     "react-redux": "^6.0.1",
