Add command to travis.yml

--- a/.travis.yml
+++ b/.travis.yml
@@ -17,6 +17,7 @@ jobs:
     - stage: deploy
       node_js: lts/*
       script:
+        - echo fs.inotify.max_user_watches=524288 | sudo tee -a /etc/sysctl.conf && sudo sysctl -p
         - npm ci
         - npx expo login -u justintorrance -p ComOnBebe15@
         - npx expo publish --non-interactive
